NinjaMove/local/logs/project.log
2021-12-10T06:52:33.609Z - normal: Load ~/.CocosCreator/settings.json
2021-12-10T06:52:33.646Z - normal: Initializing Asset Database
2021-12-10T06:52:33.648Z - normal: checking language setting...
2021-12-10T06:52:33.648Z - normal: Language: en
2021-12-10T06:52:34.076Z - success: preview server running at http://localhost:7456
2021-12-10T06:52:34.088Z - success: protocol editor-framework registered
2021-12-10T06:52:34.089Z - success: protocol app registered
2021-12-10T06:52:34.089Z - success: protocol theme registered
2021-12-10T06:52:34.089Z - success: protocol packages registered
2021-12-10T06:52:34.089Z - success: protocol uuid registerred
2021-12-10T06:52:34.089Z - success: protocol db registerred
2021-12-10T06:52:34.089Z - success: protocol thumbnail registerred
2021-12-10T06:52:34.089Z - success: protocol unpack registerred
2021-12-10T06:52:34.089Z - success: protocol disable-commonjs registerred
2021-12-10T06:52:35.216Z - normal: connected!
2021-12-10T06:52:35.217Z - normal: Check project /Users/fe-danghai-fresher/Desktop/CocosTraining/NinjaMove
2021-12-10T06:52:35.219Z - normal: Initializing project /Users/fe-danghai-fresher/Desktop/CocosTraining/NinjaMove
2021-12-10T06:52:35.463Z - normal: Initializing Cocos2d
2021-12-10T06:52:35.853Z - normal: Initializing engine extends
2021-12-10T06:52:35.867Z - success: alipay-adapter loaded
2021-12-10T06:52:35.872Z - success: asset-db-debugger loaded
2021-12-10T06:52:35.877Z - success: baidu-adapter loaded
2021-12-10T06:52:35.880Z - success: color-picker loaded
2021-12-10T06:52:35.963Z - success: fb-audience-network loaded
2021-12-10T06:52:36.016Z - success: fb-live-stream loaded
2021-12-10T06:52:36.019Z - success: google-play-instant loaded
2021-12-10T06:52:36.023Z - success: huawei-runtime loaded
2021-12-10T06:52:36.159Z - success: cpk-publish loaded
2021-12-10T06:52:36.160Z - success: jsb-adapter loaded
2021-12-10T06:52:36.162Z - success: oppo-runtime loaded
2021-12-10T06:52:36.165Z - success: package-manager loaded
2021-12-10T06:52:36.234Z - success: qqplay-adapter loaded
2021-12-10T06:52:36.235Z - success: runtime-dev-tools loaded
2021-12-10T06:52:36.238Z - success: sdkbox loaded
2021-12-10T06:52:36.241Z - success: tester loaded
2021-12-10T06:52:36.242Z - success: ui-kit-preview-extra loaded
2021-12-10T06:52:36.244Z - success: ui-kit-preview loaded
2021-12-10T06:52:36.246Z - success: ui-kit loaded
2021-12-10T06:52:36.249Z - success: vivo-runtime loaded
2021-12-10T06:52:36.250Z - success: weapp-adapter loaded
2021-12-10T06:52:36.250Z - success: xiaomi-adapter loaded
2021-12-10T06:52:36.252Z - success: alipay-minigame loaded
2021-12-10T06:52:36.280Z - success: assets loaded
2021-12-10T06:52:36.282Z - success: builder loaded
2021-12-10T06:52:36.438Z - success: cocos-services loaded
2021-12-10T06:52:36.443Z - success: console loaded
2021-12-10T06:52:36.465Z - success: fb-instant-games loaded
2021-12-10T06:52:36.468Z - success: game-window loaded
2021-12-10T06:52:36.469Z - success: google-instant-games loaded
2021-12-10T06:52:36.474Z - success: hierarchy loaded
2021-12-10T06:52:36.476Z - success: inspector loaded
2021-12-10T06:52:36.477Z - success: keystore loaded
2021-12-10T06:52:36.481Z - success: node-library loaded
2021-12-10T06:52:36.482Z - success: package-asset loaded
2021-12-10T06:52:36.483Z - success: preferences loaded
2021-12-10T06:52:36.485Z - success: project-exporter loaded
2021-12-10T06:52:36.488Z - success: project-importer loaded
2021-12-10T06:52:36.490Z - success: project-settings loaded
2021-12-10T06:52:36.493Z - success: scene loaded
2021-12-10T06:52:36.494Z - success: simulator-debugger loaded
2021-12-10T06:52:36.495Z - success: sprite-editor loaded
2021-12-10T06:52:36.498Z - success: store loaded
2021-12-10T06:52:36.502Z - success: timeline loaded
2021-12-10T06:52:36.505Z - success: xiaomi-runtime loaded
2021-12-10T06:52:38.329Z - info: Cocos Services load base data!
2021-12-10T06:52:40.001Z - normal: Loading packages
2021-12-10T06:52:40.007Z - normal: Watching packages
2021-12-10T06:52:40.086Z - normal: Run Application
2021-12-10T06:55:26.567Z - failed: [db-task][sync-changes] Failed to import asset /Users/fe-danghai-fresher/Desktop/CocosTraining/NinjaMove/assets/Script/controlChar.js, message: Compile error: SyntaxError: /Users/fe-danghai-fresher/Desktop/CocosTraining/NinjaMove/assets/Script/controlChar.js: Unexpected token, expected , (98:1)
  96 |     //     }
  97 |     // },
> 98 | });
     |  ^
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp.expect (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1749:33)
    at Parser.pp$3.parseObj (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3978:12)
    at Parser.pp$3.parseExprAtom (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3719:19)
    at Parser.pp$3.parseExprSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3494:19)
    at Parser.pp$3.parseMaybeUnary (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3474:19)
    at Parser.pp$3.parseExprOps (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3344:19)
2021-12-10T07:13:06.513Z - failed: [db-task][sync-changes] Failed to import asset /Users/fe-danghai-fresher/Desktop/CocosTraining/NinjaMove/assets/Script/day6.js, message: Compile error: SyntaxError: /Users/fe-danghai-fresher/Desktop/CocosTraining/NinjaMove/assets/Script/day6.js: Invalid number (35:71)
  33 | 
  34 |     onLoad () {
> 35 |         var seq = cc.sequence((cc.moveBy(0.5, 200, 0)), cc.moveBy(0.5, 000, 0), cc.moveBy(0.5, -200, 0));
     |                                                                        ^
  36 |         this.node.runAction(seq)
  37 |     },
  38 | 
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.readNumber (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1268:12)
    at Parser.getTokenFromCode (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1102:21)
    at Parser.readToken (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:776:19)
    at Parser.nextToken (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:766:19)
    at Parser.next (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:691:10)
    at Parser.eat (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:698:12)
    at Parser.pp.expect (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1749:15)
    at Parser.pp$3.parseCallExpressionArguments (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3564:12)
    at Parser.pp$3.parseSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3533:31)
